--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 	</header>
 
 	<main>
-		<section id="exercisePropuestos" class="p-5">
+		<section id="exercisePropuestos">
+			<h2 class="text-center p-4">Ejercicios Propuestos - Desde 0 a Nivel Avanzado.</h2>
 			<div class="container-fluid">
 				<div class="accordion" id="accordionExercise">
 					
@@ -37,15 +38,31 @@
 						<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExercise">
 							<div class="accordion-body">
 								<button type="button" class="btn btn-secondary btn-sm" id="obtenerNombreEdad">
-									Ejecutar ejercicio
+									Ejecutar este ejercicio
 								</button>
 								<br><br>
-								<p id="msgOne"></p>
+								<p id="msgOne" class="mb-0"></p>
 							</div>
 						</div>
 					</div>
 
-					
+
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingTwo">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+							Ejercicio #79812: Imprimir datos de un arreglo (arrays)
+							</button>
+						</h2>
+						<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExercise">
+							<div class="accordion-body">
+								<button type="button" class="btn btn-secondary btn-sm" onclick="imprimirArray();">
+									Ejecutar este ejercicio
+								</button>
+								<br><br>
+								<p id="msgTwo" class="mb-0"></p>
+							</div>
+						</div>
+					</div>
 
 				</div>
 			</div>
