--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<main>
 		<section id="exercisePropuestos">
 			<h2 class="text-center p-4">Ejercicios Propuestos - Desde 0 a Nivel Avanzado.</h2>
-			<div class="container-fluid">
+			<div class="container">
 				<div class="accordion" id="accordionExercise">
 					
 					<div class="accordion-item">
@@ -60,6 +60,24 @@
 								</button>
 								<br><br>
 								<p id="msgTwo" class="mb-0"></p>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingThree">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+							Ejercicio #79813: Calcular promedio de notas
+							</button>
+						</h2>
+						<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExercise">
+							<div class="accordion-body">
+								<button type="button" class="btn btn-secondary btn-sm" id="btn-promedio-notas">
+									Ejecutar este ejercicio
+								</button>
+								<br><br>
+								<p id="msgThree" class="mb-0"></p>
 							</div>
 						</div>
 					</div>
