--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	</header>
 
 	<main>
-		<section id="exercisePropuestos">
-			<h2 class="text-center p-4">Ejercicios Propuestos - Desde 0 a Nivel Avanzado.</h2>
+		<section id="exercisePropuestos" class="mb-5">
+			<h2 class="text-center p-4">Ejercicios Propuestos - Desde 0 a Nivel Intermedio.</h2>
 			<div class="container">
 				<div class="accordion" id="accordionExercise">
 					
@@ -78,6 +78,60 @@
 								</button>
 								<br><br>
 								<p id="msgThree" class="mb-0"></p>
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingFour">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+								Practica #79814: Switch-Case <img src="./assets/img/arrow-right-short.svg" alt="arrow-right-short"> Mostrar Texto Ingresado
+							</button>
+						</h2>
+						<div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExercise">
+							<div class="accordion-body">
+								<button type="button" onclick="ShowText();" class="btn btn-secondary btn-sm">
+									Ejecutar script JS
+								</button>
+								<br><br>
+								<p id="msgFour" class="mb-0"></p>
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingCinco">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCinco" aria-expanded="false" aria-controls="collapseCinco">
+								Ejercicio #79815: Operador logico <img src="./assets/img/arrow-right-short.svg" alt="arrow-right-short">
+								Contar cantidad de digitos.
+							</button>
+						</h2>
+						<div id="collapseCinco" class="accordion-collapse collapse" aria-labelledby="headingCinco" data-bs-parent="#accordionExercise">
+							<div class="accordion-body">
+								<button type="button" onclick="NumberDigitos();" class="btn btn-secondary btn-sm">
+									Ejecutar este ejercicio
+								</button>
+								<br><br>
+								<p id="msgCinco" class="mb-0"></p>
+							</div>
+						</div>
+					</div>					
+
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingSix">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+								Ejercicio #79816: Operador logico <img src="./assets/img/arrow-right-short.svg" alt="arrow-right-short">
+								Numero Mayor.
+							</button>
+						</h2>
+						<div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExercise">
+							<div class="accordion-body">
+								<button type="button" onclick="NumeroMayor();" class="btn btn-secondary btn-sm">
+									Ejecutar este ejercicio
+								</button>
+								<br><br>
+								<p id="listNumber" class="mb-0"></p> <!-- Lista los numeros ingresados por el usuario -->
+								<p id="msgSix" class="mb-0"></p>
 							</div>
 						</div>
 					</div>
