se agrega estructa html para ejercicio #79817

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<main>
 		<section id="exercisePropuestos" class="mb-5">
-			<h2 class="text-center p-4">Ejercicios Propuestos - Desde 0 a Nivel Intermedio.</h2>
+			<h2 class="text-center p-4">Ejercicios Propuestos - Prof. Klages.</h2>
 			<div class="container">
 				<div class="accordion" id="accordionExercise">
 					
@@ -132,6 +132,23 @@
 								<br><br>
 								<p id="listNumber" class="mb-0"></p> <!-- Lista los numeros ingresados por el usuario -->
 								<p id="msgSix" class="mb-0"></p>
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingSeven">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+								Ejercicio #79817: Resultados&nbsp;<b class="text-muted">"Test Ingles N°28993"</b>
+							</button>
+						</h2>
+						<div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExercise">
+							<div class="accordion-body">
+								<button type="button" onclick="ResultadoTesting();" class="btn btn-secondary btn-sm">
+									Ejecutar este ejercicio
+								</button>
+								<br><br>
+								<p id="msgSeven" class="mb-0"></p>
 							</div>
 						</div>
 					</div>
