--- a/index.html
+++ b/index.html
@@ -23,8 +23,20 @@
       					<li class="nav-item dropdown">
           					<a class="nav-link dropdown-toggle" href="#" id="navMenuCodigo" role="button" data-bs-toggle="dropdown" aria-expanded="false">#codigo</a>
           					<ul class="dropdown-menu" aria-labelledby="navMenuCodigo">
-            					<li><a class="dropdown-item" href="#">codigo02-18</a></li>
-            					<li><a class="dropdown-item" href="#">codigo03-10</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo02-18.html" target="_blank">- codigo02-18</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-01</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-03</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-07</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-11</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-16</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-19</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-24</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-27</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo05-10</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo05-12</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo05-15</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo05-37</a></li>
+            					<li><a class="dropdown-item" href="#" target="_blank">- codigo05-39</a></li>
           					</ul>
         				</li>
       				</ul>
