Se agrego las referencias a los template (ruta de acceso o links)

--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
     			</button>
 
     			<div class="collapse navbar-collapse tp-menu" id="navMenu">
-      				<ul class="navbar-nav"><!--me-auto mb-2 mb-lg-0-->
+      				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
       					<li class="nav-item dropdown">
           					<a class="nav-link dropdown-toggle" href="#" id="navMenuCodigo" role="button" data-bs-toggle="dropdown" aria-expanded="false">#codigo</a>
           					<ul class="dropdown-menu" aria-labelledby="navMenuCodigo">
-            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo02-18.html" target="_blank">- codigo02-18</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-01</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-03</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-07</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-11</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-16</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-19</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-24</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo03-27</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo05-10</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo05-12</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo05-15</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo05-37</a></li>
-            					<li><a class="dropdown-item" href="#" target="_blank">- codigo05-39</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo02-18.html" target="_blank"> codigo02-18</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo03-01.html" target="_blank"> codigo03-01</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo03-03.html" target="_blank"> codigo03-03</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo03-07.html" target="_blank"> codigo03-07</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo03-11.html" target="_blank"> codigo03-11</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo03-16.html" target="_blank"> codigo03-16</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo03-19.html" target="_blank"> codigo03-19</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo03-24.html" target="_blank"> codigo03-24</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo03-27.html" target="_blank"> codigo03-27</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo05-10.html" target="_blank"> codigo05-10</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo05-12.html" target="_blank"> codigo05-12</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo05-15.html" target="_blank"> codigo05-15</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo05-37.html" target="_blank">codigo05-37</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo05-39.html" target="_blank">codigo05-39</a></li>
           					</ul>
         				</li>
       				</ul>
