Se agrego un nuevo menu

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo05-39.html" target="_blank">codigo05-39</a></li>
           					</ul>
         				</li>
+        				<li class="nav-item dropdown">
+          					<a class="nav-link dropdown-toggle" href="#" id="navMenuCodigo" role="button" data-bs-toggle="dropdown" aria-expanded="false">#doc</a>
+          					<ul class="dropdown-menu" aria-labelledby="navMenuCodigo">
+            					<li><a class="dropdown-item" href="./templates_profesor/doc/doc2.html" target="_blank">doc2</a></li>
+            				</ul>
+            			</li>
       				</ul>
       			</div>
 			</div>
