se agrego nuevas referencias a los templates de londres (ruta de acceso o links)

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           					</ul>
         				</li>
         				<li class="nav-item dropdown">
-          					<a class="nav-link dropdown-toggle" href="#" id="navMenuDoc" role="button" data-bs-toggle="dropdown" aria-expanded="false">#doc</a>
-          					<ul class="dropdown-menu" aria-labelledby="navMenuDoc">
+          					<a class="nav-link dropdown-toggle" href="#" id="navMenuCodigo" role="button" data-bs-toggle="dropdown" aria-expanded="false">#doc</a>
+          					<ul class="dropdown-menu" aria-labelledby="navMenuCodigo">
             					<li><a class="dropdown-item" href="./templates_profesor/doc/doc2.html" target="_blank">doc2</a></li>
             				</ul>
             			</li>
@@ -49,6 +49,9 @@
           					<a class="nav-link dropdown-toggle" href="#" id="navMenuLondres" role="button" data-bs-toggle="dropdown" aria-expanded="false">#londres</a>
           					<ul class="dropdown-menu" aria-labelledby="navMenuLondres">
             					<li><a class="dropdown-item" href="./templates_profesor/londres/londres05-17.html" target="_blank">londres05-17</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/londres/londres05-19.html" target="_blank">londres05-19</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/londres/londres05-21.html" target="_blank">londres05-21</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/londres/londres05-25.html" target="_blank">londres05-25</a></li>
             				</ul>
             			</li>
       				</ul>
