se agrego nuevas referencias a los templates de forms (ruta de acceso o links)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     			<div class="collapse navbar-collapse tp-menu" id="navMenu">
       				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
       					<li class="nav-item dropdown">
-          					<a class="nav-link dropdown-toggle" href="#" id="navMenuCodigo" role="button" data-bs-toggle="dropdown" aria-expanded="false">#codigo</a>
+          					<a class="nav-link dropdown-toggle" href="#" id="navMenuCodigos" role="button" data-bs-toggle="dropdown" aria-expanded="false">#codigo</a>
           					<ul class="dropdown-menu" aria-labelledby="navMenuCodigo">
             					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo02-18.html" target="_blank"> codigo02-18</a></li>
             					<li><a class="dropdown-item" href="./templates_profesor/codigos/codigo03-01.html" target="_blank"> codigo03-01</a></li>
@@ -66,6 +66,21 @@
             					<li><a class="dropdown-item" href="./templates_profesor/listas/listas_2.html" target="_blank">listas_2</a></li>
             					<li><a class="dropdown-item" href="./templates_profesor/listas/listas_7.html" target="_blank">listas_7</a></li>
             					<li><a class="dropdown-item" href="./templates_profesor/listas/listas_13.html" target="_blank">listas_13</a></li>
+            				</ul>
+            			</li>
+            			<li class="nav-item dropdown">
+          					<a class="nav-link dropdown-toggle" href="#" id="navMenuFomrs" role="button" data-bs-toggle="dropdown" aria-expanded="false">#forms</a>
+          					<ul class="dropdown-menu" aria-labelledby="navMenuForms">
+            					<li><a class="dropdown-item" href="./templates_profesor/forms/form1.html" target="_blank">form1</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/forms/form2.html" target="_blank">form2</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/forms/form3.html" target="_blank">form3</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/forms/form4.html" target="_blank">form4</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/forms/form5.html" target="_blank">form5</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/forms/form6.html" target="_blank">form6</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/forms/form7.html" target="_blank">form7</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/forms/form8.html" target="_blank">form8</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/forms/form9.html" target="_blank">form9</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/forms/form10.html" target="_blank">form10</a></li>
             				</ul>
             			</li>
       				</ul>
