se agrego nuevas referencias a los templates imagen_de_fondo (ruta de acceso o links)

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
           					<ul class="dropdown-menu" aria-labelledby="navMenuAnexos">
             					<li><a class="dropdown-item" href="./templates_profesor/doc/doc2.html" target="_blank">doc2</a></li>
             					<li><a class="dropdown-item" href="./templates_profesor/doc/alinear_imagen.html" target="_blank">alinear_imagen</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/doc/imagen_de_fondo_1.html" target="_blank">imagen_de_fondo_1</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/doc/imagen_de_fondo_2.html" target="_blank">imagen_de_fondo_2</a></li>
             				</ul>
             			</li>
             			<li class="nav-item dropdown">
