--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<div class="accordion-item">
 						<h2 class="accordion-header" id="headingTwo">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-							Ejercicio #79812: Imprimir datos de un arreglo (arrays) (<b>PENDIENTE.</b>)
+							Ejercicio #79812: Imprimir datos de un arreglo (arrays)
 							</button>
 						</h2>
 						<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExercise">
@@ -159,7 +159,7 @@
 						<div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExercise">
 							<div class="accordion-body">
 								<button type="button" onclick="ShowText();" class="btn btn-secondary btn-sm">
-									Ejecutar script JS
+									Ejecutar Script
 								</button>
 								<br><br>
 								<p id="msgFour" class="mb-0"></p>
@@ -439,6 +439,75 @@
 								</button>
 								
 								<p id="msgDiezSeis" class="mt-3 mb-0"></p>
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingDiezSeite">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDiezSeite" aria-expanded="false" aria-controls="collapseDiezSeite">
+								Practica #79827: Validar selected.
+							</button>
+						</h2>
+						<div id="collapseDiezSeite" class="accordion-collapse collapse" aria-labelledby="headingDiezSeite" data-bs-parent="#accordionExercise">
+							<div class="accordion-body">
+								<div class="col-md-2">
+									<label for="inpOpcion" class="form-label">Selecci&oacute;ne edad:</label>
+									<select class="form-select form-select-sm" aria-label="Default select example" onchange="validarEdades(this.value)">
+  										<option selected value="0">...</option>
+  										<option value="18">18</option>
+  										<option value="36">36</option>
+  										<option value="45">45</option>
+  										<option value="75">75</option>
+									</select>	
+								</div>
+
+								<p id="msgDiezSeite" class="mt-3 mb-0"></p>
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingDiezOcho">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDiezOcho" aria-expanded="false" aria-controls="collapseDiezOcho">
+								Practica #79828: Clase Math (Funciones matematicas).
+							</button>
+						</h2>
+						<div id="collapseDiezOcho" class="accordion-collapse collapse" aria-labelledby="headingDiezOcho" data-bs-parent="#accordionExercise">
+							<div class="accordion-body">
+								<p class=p-collapseGeneral>
+									<i>Nota: Para la potencia el exponente por defecto es n<sup>2</sup></i>
+								</p>
+
+								<button type="button" class="btn btn-secondary btn-sm" id="classMath">
+									Ejecutar Script
+								</button>
+								<p id="msgDiezOcho-Uno" class="mt-3 mb-0"></p>
+								<p id="msgDiezOcho-Dos" class="mb-0"></p>
+								<p id="msgDiezOcho-Tres" class="mb-0"></p>
+								<p id="msgDiezOcho-Cuatro" class=" mb-0"></p>
+							</div>
+						</div>
+					</div>
+
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingDiezNueve">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDiezNueve" aria-expanded="false" aria-controls="collapseDiezNueve">
+								Ejercicio #79829: Mostrar numeros consecutivos.
+							</button>
+						</h2>
+						<div id="collapseDiezNueve" class="accordion-collapse collapse" aria-labelledby="headingDiezNueve" data-bs-parent="#accordionExercise">
+							<div class="accordion-body">
+								<p>Confeccionar un programa que reciba dos numeros (desde - hasta) y mostrarlos por pantalla.</p>
+
+								<button type="button" class="btn btn-secondary btn-sm" onclick="NumerosConsecutivos();">
+									Ejecutar este ejercicio
+								</button>
+
+								<p class="p-collapseGeneral mt-3">
+									<i>Nota: Para ver el ejercicio resuelto, verlo por la consola del nevagador.</i>
+								</p>
+								<p id="msgDiezNueve" class="mt-3 mb-0"></p>
 							</div>
 						</div>
 					</div>
