se agrega nuevas referencia (ruta de acceso o links) para los template de insertar_imagen

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         				</li>
         				<li class="nav-item dropdown">
           					<a class="nav-link dropdown-toggle" href="#" id="navMenuDocuments" role="button" data-bs-toggle="dropdown" aria-expanded="false">#documents</a>
-          					<ul class="dropdown-menu" aria-labelledby="navMenuAnexos">
+          					<ul class="dropdown-menu" aria-labelledby="navMenuDocuments">
             					<li><a class="dropdown-item" href="./templates_profesor/documents/doc2.html" target="_blank">doc2</a></li>
             					<li><a class="dropdown-item" href="./templates_profesor/documents/alinear_imagen.html" target="_blank">alinear_imagen</a></li>
             					<li><a class="dropdown-item" href="./templates_profesor/documents/imagen_de_fondo_1.html" target="_blank">imagen_de_fondo_1</a></li>
@@ -59,7 +59,7 @@
             			</li>
             			<li class="nav-item dropdown">
           					<a class="nav-link dropdown-toggle" href="#" id="navMenuListas" role="button" data-bs-toggle="dropdown" aria-expanded="false">#listas</a>
-          					<ul class="dropdown-menu" aria-labelledby="navMenuLondres">
+          					<ul class="dropdown-menu" aria-labelledby="navMenuListas">
             					<li><a class="dropdown-item" href="./templates_profesor/listas/lista1.html" target="_blank">lista1</a></li>
             					<li><a class="dropdown-item" href="./templates_profesor/listas/lista2.html" target="_blank">lista2</a></li>
             					<li><a class="dropdown-item" href="./templates_profesor/listas/lista3.html" target="_blank">lista3</a></li>
@@ -83,6 +83,20 @@
             					<li><a class="dropdown-item" href="./templates_profesor/forms/form8.html" target="_blank">form8</a></li>
             					<li><a class="dropdown-item" href="./templates_profesor/forms/form9.html" target="_blank">form9</a></li>
             					<li><a class="dropdown-item" href="./templates_profesor/forms/form10.html" target="_blank">form10</a></li>
+            				</ul>
+            			</li>
+						<li class="nav-item dropdown">
+          					<a class="nav-link dropdown-toggle" href="#" id="navMenuInsertImages" role="button" data-bs-toggle="dropdown" aria-expanded="false">#insertar_imagen</a>
+          					<ul class="dropdown-menu" aria-labelledby="navMenuInsertImages">
+            					<li><a class="dropdown-item" href="./templates_profesor/insertar_imagen/insertar_imagen_1.html" target="_blank">insertar_imagen_1</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/insertar_imagen/insertar_imagen_2.html" target="_blank">insertar_imagen_2</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/insertar_imagen/insertar_imagen_3.html" target="_blank">insertar_imagen_3</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/insertar_imagen/insertar_imagen_4.html" target="_blank">insertar_imagen_4</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/insertar_imagen/insertar_imagen_5.html" target="_blank">insertar_imagen_5</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/insertar_imagen/insertar_imagen_6.html" target="_blank">insertar_imagen_6</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/insertar_imagen/insertar_imagen_7.html" target="_blank">insertar_imagen_7</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/insertar_imagen/insertar_imagen_8.html" target="_blank">insertar_imagen_8</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/insertar_imagen/insertar_imagen_10.html" target="_blank">insertar_imagen_10</a></li>
             				</ul>
             			</li>
       				</ul>
