--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
             					<li><a class="dropdown-item" href="./templates_profesor/insertar_imagen/insertar_imagen_10.html" target="_blank">insertar_imagen_10</a></li>
             				</ul>
             			</li>
+						<li class="nav-item dropdown">
+          					<a class="nav-link dropdown-toggle" href="#" id="navMenuTable" role="button" data-bs-toggle="dropdown" aria-expanded="false">#tabla</a>
+          					<ul class="dropdown-menu" aria-labelledby="navMenuTable">
+            					<li><a class="dropdown-item" href="./templates_profesor/tabla/tabla_1.html" target="_blank">tabla_1</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/tabla/tabla_5.html" target="_blank">tabla_5</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/tabla/tabla_6.html" target="_blank">tabla_6</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/tabla/tabla_11.html" target="_blank">tabla_11</a></li>
+            					<li><a class="dropdown-item" href="./templates_profesor/tabla/tabla_12.html" target="_blank">tabla_12</a></li>
+            				</ul>
+            			</li>
       				</ul>
       			</div>
 			</div>
