se agrega estructa html para ejercicio #79830

--- a/index.html
+++ b/index.html
@@ -543,6 +543,23 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingVeinte">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseVeinte" aria-expanded="false" aria-controls="collapseVeinte">
+								Ejercicio #79830: Suma con retorno.
+							</button>
+						</h2>
+						<div id="collapseVeinte" class="accordion-collapse collapse" aria-labelledby="headingViente" data-bs-parent="#accordionExercise">
+							<div class="accordion-body">
+								<button type="button" class="btn btn-secondary btn-sm" id="sumaConRetorno">
+									Ejecutar este ejercicio
+								</button>
+
+								<p id="msgVeinte" class="mt-3 mb-0"></p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
