--- a/index.html
+++ b/index.html
@@ -289,14 +289,14 @@
 					<div class="accordion-item">
 						<h2 class="accordion-header" id="headingNueve">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNueve" aria-expanded="false" aria-controls="collapseNueve">
-								Ejercicio #79819: Calcular sueldo de un trabajador (<b>PENDIENTE.</b>)
+								Ejercicio #79819: Calcular sueldo neto de un trabajador.
 							</button>
 						</h2>
 						<div id="collapseNueve" class="accordion-collapse collapse" aria-labelledby="headingNueve" data-bs-parent="#accordionExercise">
 							<div class="accordion-body">
 								<div class="row">
 									<div class="col-md-3">
-										<input class="form-control form-control-sm" type="number" id="inpSueldo" placeholder="Ingrese su sueldo">	
+										<input class="form-control form-control-sm" type="text" id="inpSueldo" placeholder="Ingrese su sueldo">	
 									</div>
 									<div class="col-md-3">
 										<input class="form-control form-control-sm" type="number" id="inpAntiguedad" placeholder="Años de antiguedad">	
@@ -316,7 +316,7 @@
 					<div class="accordion-item">
 						<h2 class="accordion-header" id="headingDiez">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDiez" aria-expanded="false" aria-controls="collapseDiez">
-								Ejercicio #79820: Calculadora Utilizando Arrays (Suma, Resta, Mutiplicacion, Division) (<b>PENDIENTE.</b>)
+								Ejercicio #79820: Calculadora Utilizando Arrays (Suma, Resta, Mutiplicacion, Division)
 							</button>
 						</h2>
 						<div id="collapseDiez" class="accordion-collapse collapse" aria-labelledby="headingDiez" data-bs-parent="#accordionExercise">
@@ -384,13 +384,13 @@
 								</ul>
 								<div class="row">
 									<div class="col-md-2">
-										<input class="form-control form-control-sm" type="text" id="txtNum1" placeholder="Primer valor" onkeyup="quitarGuiones(this)">	
+										<input class="form-control form-control-sm" type="text" id="txtNum1" placeholder="Primer valor" onkeyup="RemplazarComa(this)">	
 									</div>
 									<div class="col-md-2">
-										<input class="form-control form-control-sm" type="text" id="txtNum2" placeholder="Segundo valor" onkeyup="quitarGuiones(this)">	
+										<input class="form-control form-control-sm" type="text" id="txtNum2" placeholder="Segundo valor" onkeyup="RemplazarComa(this)">	
 									</div>
 									<div class="col-md-2">
-										<input class="form-control form-control-sm" type="text" id="txtNum3" placeholder="Tercer valor" onkeyup="quitarGuiones(this)">	
+										<input class="form-control form-control-sm" type="text" id="txtNum3" placeholder="Tercer valor" onkeyup="RemplazarComa(this)">	
 									</div>
 								</div>
 
